Crear ID de la aplicación con un ID secreto - Google Developer

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=3000
 DB_CNN=mongodb+srv://MEAN_USER:6uI45DpiVnPtQ9No@micluster.xkylj.mongodb.net/hospitaldb
 JWT_SECRET=Sistemas@2022@?
+
+GOOGLE_ID=70858709123-fcvm26auhk4us67vhrmj2ashsi2925ls.apps.googleusercontent.com
+GOOGLE_SECRET=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
