--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,15 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+/uploads/hospitales/*.jpg
+/uploads/hospitales/*.png
+/uploads/hospitales/*.gif
+
+/uploads/medicos/*.jpg
+/uploads/medicos/*.png
+/uploads/medicos/*.gif
+
+/uploads/usuarios/*.jpg
+/uploads/usuarios/*.png
+/uploads/usuarios/*.gif
